2012-12-31  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/cairo/CairoFntInfo.m (-drawGlyphs:..., -setupAttributes):
	Invert the value of matrix[2]. See bug #30493

2012-11-26 12:56-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/cairo/Win32CairoGState.h
	* Source/cairo/Win32CairoGState.m: Add missing files for windows.

2012-11-26 00:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog
	* config.h.in
	* configure
	* configure.ac
	* Headers/win32/WIN32Server.h
	* Source/cairo/CairoContext.m
	* Source/cairo/CairoGState.m
	* Source/cairo/CairoPDFSurface.m
	* Source/cairo/GNUmakefile
	* Source/cairo/Win32CairoSurface.m
	* Source/GSBackend.m
	* Source/gsc/GSGState.m
	* Source/win32/w32_create.m
	* Source/win32/w32_general.m
	* Source/win32/w32_GLcontext.m
	* Source/win32/w32_movesize.m
	* Source/win32/w32_windowdisplay.m
	* Source/win32/WIN32Server.m
	* Source/winlib/GNUmakefile.preamble: Merge of all testplant
	branch changes to trunk for Cairo changes.  Did code cleanup to
	make the code conform to coding standards.

2012-10-24  Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m : Fix findWindowAt:windowRef:excluding:
	to skip windows with the ignoresMouseEvents property set.

2012-10-14  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/win32/w32_create.m (-decodeWM_CREATEParams:::): Call
	windowbacking:: instead of handling backingstore here.
	Merge some changes from testplant branch
	* Source/win32/WIN32Server.m : Fix for fatal exceptions when a nil
	mouse event tried to post
	Patch by Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
	* Source/gsc/GSGState.m (-description),
	* Source/cairo/CairoGState.m (-description): Add this method.
	* Headers/win32/WIN32Server.h - Added a mutable array for storing
	multiple screen information from GDI screen lookup
	* Source/win32/WIN32Server.m - Added startup sequence to invoke
	GDI functions to look up multiple screen/monitor information